# GPU_Optimisation_Lab

./: .gitignore  README.md
02_matrix_multiplication/: CMakeLists.txt
02_matrix_multiplication/include/: constants.h  cuda_check.h  kernels.cuh
02_matrix_multiplication/profiling/: naive_ncu.txt  ncu_shared.txt
02_matrix_multiplication/src/: kernels.cu  main.cu
03_reduction/: CMakeLists.txt
03_reduction/include/: common.h  kernels.cuh
03_reduction/profiling/: ncu_128.txt  ncu_512.txt  ncu_base.txt  ncu_interleaved.txt  ncu_shared_unrolled.txt  ncu_v3.txt  ncu_v4.txt  ncu_v5
03_reduction/src/: kernels.cu  main.cu
vector_add/: CMakeLists.txt
vector_add/include/: complex.h
vector_add/src/: main.cu
